[project]
name = "gist-crawl"
version = "0.1.0"
description = "Git repository crawler with GitIngest integration for generating repository gists"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
